[tool.poetry]
name = "wcc-timetable-generator"
version = "0.1.0"
description = ""
authors = ["Tsierenana Bôtramanagna Gracy <gtsierenana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
